--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -158,7 +158,7 @@
       "id": "tt20672482",
       "type": "series",
       "name": "Moonrise",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx150654-DjqOv8Md8yTI.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx150654-AYFOHaZIQkCI.png",
       "description": "Genres: Action, Fantasy, Sci-Fi\nTags:CGI/Space/Male Protagonist\n In a not-too-distant future, humanity has established a loosely organized world government with everything managed by an international AI network called Sapientia. People live peaceful lives by loyally obeying its rational decisions. However, Sapientia’s lunar development project, which sends criminals and pollutants to the Moon to maintain Earth’s peace, creates disparity and poverty on the Moon, sparking a catalyst for war. Jacob \"Jack\" Shadow gets caught up in this conflict after losing his family to a terrorist bombing by the Moon's rebel army. Vowing revenge, Jack joins the Earth army as a scout on the Moon, only to discover an unexpected leader among the resistance forces. <br><br>\n(Source: Netflix)"
     },
     {
@@ -180,7 +180,7 @@
       "type": "series",
       "name": "Rock is a Lady’s Modesty",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179694-6FMVc2mdUwJO.jpg",
-      "description": "Genres: Drama, Music\nTags:Rock Music/Female Protagonist/Ojou-sama/Band/Yuri/School/LGBTQ+ Themes/Seinen\nAt an elite all-girls' academy where refined young ladies gather, Lilisa Suzunomiya, now the daughter of a real estate tycoon after her mother remarried, is forced to abandon her guitar and rock music to fit in. However, her passion is reignited by sounds from the old school building, where she meets a skilled drummer who shares her love for rock. Together, they embrace their inner rockstars, elegantly clashing and shouting their way through the academy in this captivating tale of grace and rebellion.\n<br><br>\n(Source: HIDIVE)"
+      "description": "Genres: Drama, Music\nTags:Rock Music/Female Protagonist/Ojou-sama/Band/School/LGBTQ+ Themes/Seinen/Yuri\nAt an elite all-girls' academy where refined young ladies gather, Lilisa Suzunomiya, now the daughter of a real estate tycoon after her mother remarried, is forced to abandon her guitar and rock music to fit in. However, her passion is reignited by sounds from the old school building, where she meets a skilled drummer who shares her love for rock. Together, they embrace their inner rockstars, elegantly clashing and shouting their way through the academy in this captivating tale of grace and rebellion.\n<br><br>\n(Source: HIDIVE)"
     },
     {
       "id": "tt32779862",
@@ -239,6 +239,13 @@
       "description": "Genres: Adventure, Comedy, Fantasy\nTags:Shounen/Samurai/Male Protagonist/Animals\nThe protagonist, Yaiba (Kurogane Yaiba), is a wild samurai boy who trains in the jungle with his father, Kenjuro! By chance, Yaiba returns to Japan, where he meets his rival Takeshi Onimaru, who has the same samurai spirit as Yaiba, in a new training ground.\n<br><br>\nYaiba is living a life of serious competition, but when Onimaru obtains the “Legendary Demon Sword”, he is on a journey full of spectacle and great adventure...!<br><br>\n\n(Source: Crunchyroll News)"
     },
     {
+      "id": "tt36270030",
+      "type": "series",
+      "name": "Kakushite! Makina-san!!",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177509-LzpyXGnjitvF.jpg",
+      "description": "Genres: Comedy, Ecchi, Mecha, Romance, Sci-Fi\nTags:Seinen/Robots/Female Protagonist/Male Protagonist/Heterosexual\nThis risque romantic comedy story centers on Eita, an introvert mecha otaku high schooler who has a crush on the school's most popular girl Makina. When Eita finds Makina at her doorstep, he is flustered, and even more so when Makina reveals her secret: that she is a \"sexaroid\" robot designed for pleasure, and she is asking Eita to conduct some repairs on her discreetly. While Makina immediately tries to make a move on Eita physically, Eita struggles to contain himself, while also hiding her secret. <br><br>\n\n(Source: Anime News Network, edited)"
+    },
+    {
       "id": "tt35508195",
       "type": "series",
       "name": "GUILTY GEAR STRIVE: DUAL RULERS",
@@ -246,11 +253,11 @@
       "description": "Genres: Action, Sci-Fi\nTags:Full CGI/LGBTQ+ Themes\nAfter the decline of the once robust fields of science and technology, a new energy source known as magic fuels the modern era. Humanity creates forbidden biological weapons: Gears. Those Gears eventually stand against humanity in a rebellion. Although they manage to overcome in the struggle for survival known as the Crusades, humanity’s losses are so great that even after several decades pass, their emotional wounds remain unable to fully heal. Sin Kiske, the child of a human and a Gear, heads to his father Ky and mother Dizzy’s wedding ceremony. Their wedding breaks the ultimate taboo: a union between a human and a Gear. Even with the world at peace, it took many years for such a ceremony to come to fruition. Despite the complex array of emotions surrounding it, the wedding ceremony is met with blessings. When suddenly, a mysterious girl appears… The fated child inheriting Gear blood–and the mysterious girl who despises Gears. Their meeting would shake the world.<br><br>\n(Source: Arc System Works YouTube Description)"
     },
     {
-      "id": "tt32524709",
+      "id": "tt16755706",
       "type": "series",
-      "name": "Kakushite! Makina-san!!",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177509-LzpyXGnjitvF.jpg",
-      "description": "Genres: Comedy, Ecchi, Mecha, Romance, Sci-Fi\nTags:Seinen/Robots/Female Protagonist/Male Protagonist/Heterosexual\nThis risque romantic comedy story centers on Eita, an introvert mecha otaku high schooler who has a crush on the school's most popular girl Makina. When Eita finds Makina at her doorstep, he is flustered, and even more so when Makina reveals her secret: that she is a \"sexaroid\" robot designed for pleasure, and she is asking Eita to conduct some repairs on her discreetly. While Makina immediately tries to make a move on Eita physically, Eita struggles to contain himself, while also hiding her secret. <br><br>\n\n(Source: Anime News Network, edited)"
+      "name": "Lycoris Recoil: Friends are thieves of time.",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179706-u32IofOQZ48q.jpg",
+      "description": "Genres: Slice of Life\nTags:Restaurant/Cute Girls Doing Cute Things/Female Protagonist/Kuudere/Primarily Female Cast\nA series of shorts showing the daily lives of Chisato, Takina, and others employed in Cafe LycoReco. "
     },
     {
       "id": "tt35437319",
@@ -313,7 +320,7 @@
       "type": "series",
       "name": "Catch Me at the Ballpark!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184279-1qd5aqJ94IAb.jpg",
-      "description": "Genres: Comedy, Romance, Slice of Life, Sports\nTags:Seinen/Baseball/Gyaru/Heterosexual\nTo escape his tiring job, weary Murata finds escape at a nearby baseball stadium. While the games are thrilling, it’s Ruriko, the gyaru as cold as the beer she serves but secretly a sweetheart, who keeps him coming back. As her first regular, Murata discovers the warmth behind her frosty demeanor, and their hilarious, heartwarming encounters light up the ballpark and maybe even their hearts.\n<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Romance, Slice of Life, Sports\nTags:Seinen/Baseball/Gyaru/Heterosexual/Primarily Adult Cast\nTo escape his tiring job, weary Murata finds escape at a nearby baseball stadium. While the games are thrilling, it’s Ruriko, the gyaru as cold as the beer she serves but secretly a sweetheart, who keeps him coming back. As her first regular, Murata discovers the warmth behind her frosty demeanor, and their hilarious, heartwarming encounters light up the ballpark and maybe even their hearts.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt4561040",
