--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -1,7 +1,7 @@
 {
   "metas": [
     {
-      "id": "tt16163536",
+      "id": "tt9307686",
       "type": "series",
       "name": "Fire Force Season 3",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx149118-AOQb0xuTssGl.jpg",
@@ -53,7 +53,7 @@
       "id": "tt35436364",
       "type": "series",
       "name": "Please Put Them On, Takamine-san",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179965-fkPzvBjP4paF.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179965-EwqzG3xSyxwc.jpg",
       "description": "Genres: Comedy, Ecchi, Romance, Slice of Life\nTags:Nudity/Femdom/Large Breasts/Heterosexual/Tsundere/Bullying/Slavery/Female Protagonist/School/Male Protagonist/Shounen\nTakane Takamine is the goddess of her high school. With perfect grades, athletic prowess, and unrivaled beauty, this student council president is the apple of everyone's eye-including Koushi Shirota, a below-average student with no friends or social prospects whatsoever. But he'll soon find out the secret behind Takamine's unbelievable success-her underwear! When she strips, she can undo any of her past actions, and now that Koushi knows, Takamine won't let him off so easy...<br><br>\n\n(Source: Yen Press)"
     },
     {
@@ -81,7 +81,7 @@
       "id": "tt35346400",
       "type": "series",
       "name": "Can a Boy-Girl Friendship Survive?",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx153554-gTVSkLhlcCzM.png",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx153554-DXRLKyIptsB5.png",
       "description": "Genres: Comedy, Romance\nTags:Heterosexual/School/Love Triangle\nChildhood BFFs Himari and Yuu’s vow of friendship hits turbulence when Yuu reunites with his first crush in high school. Himari, who’s never known the fuzzy warmth of a crush, now must confront her feelings. Their shared dreams and peaceful days as a twosome gardening club are tested in this tale of love, flowers, and growing pains!<br><br>\n(Source: Crunchyroll, edited)"
     },
     {
@@ -246,18 +246,18 @@
       "description": "Genres: Comedy, Ecchi, Mecha, Romance, Sci-Fi\nTags:Seinen/Robots/Female Protagonist/Male Protagonist/Heterosexual\nThis risque romantic comedy story centers on Eita, an introvert mecha otaku high schooler who has a crush on the school's most popular girl Makina. When Eita finds Makina at her doorstep, he is flustered, and even more so when Makina reveals her secret: that she is a \"sexaroid\" robot designed for pleasure, and she is asking Eita to conduct some repairs on her discreetly. While Makina immediately tries to make a move on Eita physically, Eita struggles to contain himself, while also hiding her secret. <br><br>\n\n(Source: Anime News Network, edited)"
     },
     {
+      "id": "tt16755706",
+      "type": "series",
+      "name": "Lycoris Recoil: Friends are thieves of time.",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179706-u32IofOQZ48q.jpg",
+      "description": "Genres: Slice of Life\nTags:Restaurant/Cute Girls Doing Cute Things/Primarily Female Cast/Female Protagonist/Kuudere\nA series of shorts showing the daily lives of Chisato, Takina, and others employed in Cafe LycoReco. "
+    },
+    {
       "id": "tt35508195",
       "type": "series",
       "name": "GUILTY GEAR STRIVE: DUAL RULERS",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178046-4EeU8cC3WJOs.jpg",
       "description": "Genres: Action, Sci-Fi\nTags:Full CGI/LGBTQ+ Themes\nAfter the decline of the once robust fields of science and technology, a new energy source known as magic fuels the modern era. Humanity creates forbidden biological weapons: Gears. Those Gears eventually stand against humanity in a rebellion. Although they manage to overcome in the struggle for survival known as the Crusades, humanity’s losses are so great that even after several decades pass, their emotional wounds remain unable to fully heal. Sin Kiske, the child of a human and a Gear, heads to his father Ky and mother Dizzy’s wedding ceremony. Their wedding breaks the ultimate taboo: a union between a human and a Gear. Even with the world at peace, it took many years for such a ceremony to come to fruition. Despite the complex array of emotions surrounding it, the wedding ceremony is met with blessings. When suddenly, a mysterious girl appears… The fated child inheriting Gear blood–and the mysterious girl who despises Gears. Their meeting would shake the world.<br><br>\n(Source: Arc System Works YouTube Description)"
-    },
-    {
-      "id": "tt16755706",
-      "type": "series",
-      "name": "Lycoris Recoil: Friends are thieves of time.",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179706-u32IofOQZ48q.jpg",
-      "description": "Genres: Slice of Life\nTags:Restaurant/Cute Girls Doing Cute Things/Female Protagonist/Kuudere/Primarily Female Cast\nA series of shorts showing the daily lives of Chisato, Takina, and others employed in Cafe LycoReco. "
     },
     {
       "id": "tt35437319",
@@ -309,11 +309,11 @@
       "description": "Genres: Mystery, Psychological, Supernatural\nTags:Shounen\nOur setting is in Tokyo in 1948, just right after the war. Kanna Kusakabe had just become a second-year at a high school when she meets the new language teacher, Akihiko Chuuzenji.<br><br>\n\nMysterious supernatural things keep happening around Kanna. Once again today, Kanna is going to open the doors to the library prep room to seek help from the surly Chuuzenji-sensei who is waiting inside.<br><br>\n\nA high school supernatural mystery featuring the unlikely duo between a teacher and a high school girl is about to begin!<br><br>\n\n(Source: Pony Canyon, edited)"
     },
     {
-      "id": "tt28400589",
+      "id": "tt36156863",
       "type": "series",
-      "name": "MIRU: Watashi no Mirai",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166373-97U2bjAxD3l7.jpg",
-      "description": "Genres: Adventure, Sci-Fi\nTags:Robots/Environmental/Female Protagonist/Coming of Age/Dystopian\n<i>Confrontation and Harmony between Humans and Nature.</i>\n<br><br>\nIn the distant future, humans create a robot named MIRU capable of traveling through time, visiting various eras, places, and even parallel worlds.\n<br><br>\nUnlike some robots, MIRU isn't equipped with weapons. Instead, it helps people overcome immense obstacles peacefully, encouraging new beginnings without violence.\n<br><br>\nMIRU continuously evolves by interacting with people, learning and growing to assist those struggling to survive.\n<br><br>\nIt listens to their problems and offers support.\n<br><br>\nBy helping others, MIRU sets off a “Butterfly Effect”, of dramatic change guiding society toward a brighter future.\n<br><br>\nWhy was MIRU created? What is its purpose? Can it save the Earth and humanity from a dystopian future?\n<br><br>\n<i>\"The future is in our hands.\"</i>\n<br><br>\n(Official MIRU Site, edited)<br><br>\n<i>Contains:<br>\n1) Episode 079:「スターダストメモリー」 \"Stardust Memory\"<br>\n2) Episode 101: 「The King of the Forest」<br>\n3) Episode 217: 「この世の波風さわぎ」\"Londonderry Air\"<br>\n4) Episode 630: 「Re: MIRU」<br>\n5) Episode 926: 「待ってて、今行く」 \"Wait, I'll Be There\"</i>"
+      "name": "cocoon: Aru Natsu no Shoujo-tachi Yori",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166527-0sPHL9124m39.jpg",
+      "description": "Genres: Drama\nTags:Josei/War/Female Protagonist/Historical/Primarily Female Cast/Rural/Survival/Primarily Teen Cast\nSan and Mayu are two schoolgirls living in Okinawa during the closing months of the Pacific War. Together with their classmates, the two friends are drafted into the war effort as nurses for wounded soldiers. When ordered to die for their country, the remaining members of the group escape only to face the harsh environment of a tropical paradise that has become a hellish battlefield."
     },
     {
       "id": "tt13835440",
@@ -323,18 +323,18 @@
       "description": "Genres: Comedy, Romance, Slice of Life, Sports\nTags:Seinen/Baseball/Gyaru/Heterosexual/Primarily Adult Cast\nTo escape his tiring job, weary Murata finds escape at a nearby baseball stadium. While the games are thrilling, it’s Ruriko, the gyaru as cold as the beer she serves but secretly a sweetheart, who keeps him coming back. As her first regular, Murata discovers the warmth behind her frosty demeanor, and their hilarious, heartwarming encounters light up the ballpark and maybe even their hearts.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
+      "id": "tt28400589",
+      "type": "series",
+      "name": "MIRU: Watashi no Mirai",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166373-97U2bjAxD3l7.jpg",
+      "description": "Genres: Adventure, Sci-Fi\nTags:Robots/Environmental/Female Protagonist/Coming of Age/Dystopian\n<i>Confrontation and Harmony between Humans and Nature.</i>\n<br><br>\nIn the distant future, humans create a robot named MIRU capable of traveling through time, visiting various eras, places, and even parallel worlds.\n<br><br>\nUnlike some robots, MIRU isn't equipped with weapons. Instead, it helps people overcome immense obstacles peacefully, encouraging new beginnings without violence.\n<br><br>\nMIRU continuously evolves by interacting with people, learning and growing to assist those struggling to survive.\n<br><br>\nIt listens to their problems and offers support.\n<br><br>\nBy helping others, MIRU sets off a “Butterfly Effect”, of dramatic change guiding society toward a brighter future.\n<br><br>\nWhy was MIRU created? What is its purpose? Can it save the Earth and humanity from a dystopian future?\n<br><br>\n<i>\"The future is in our hands.\"</i>\n<br><br>\n(Official MIRU Site, edited)<br><br>\n<i>Contains:<br>\n1) Episode 079:「スターダストメモリー」 \"Stardust Memory\"<br>\n2) Episode 101: 「The King of the Forest」<br>\n3) Episode 217: 「この世の波風さわぎ」\"Londonderry Air\"<br>\n4) Episode 630: 「Re: MIRU」<br>\n5) Episode 926: 「待ってて、今行く」 \"Wait, I'll Be There\"</i>"
+    },
+    {
       "id": "tt4561040",
       "type": "series",
       "name": "The Gorilla God’s Go-To Girl",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx182060-r0ihNqhiyvpT.jpg",
       "description": "Genres: Comedy, Fantasy, Romance\nTags:Male Harem/Female Protagonist/Shoujo\nSophia, a timid daughter of a count, just wanted a peaceful life, but the Gorilla God had other plans. Blessed with unmatched strength, she’s thrust into the Royal Knight Order, turning her quiet days into chaos. Now, she must juggle school, the knight life, and her overwhelming power. Who knew gorilla strength could be so complicated?<br><br>\n\n(Source: Crunchyroll)"
-    },
-    {
-      "id": "tt34853325",
-      "type": "series",
-      "name": "Princess-Session Orchestra",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178052-pzEAGk697GMM.png",
-      "description": "Genres: Mahou Shoujo, Music\nTags:Henshin/Magic/Female Protagonist\nThe anime takes place in Alicepia, which is a mysterious country that has existed since ancient times. The inhabitants of Alicepia, the Alicepians, are a fun-loving people, but one day mysterious monsters called Jamaock appeared to threaten the peace of Alicepia. The story follows a trio of \"princesses\" who never forget the song in their hearts, even when facing such danger and step up to save the day with the power of music. <br><br>\n\n(Source: Anime News Network, Crunchyroll News, edited)"
     },
     {
       "id": "tt36041841",
@@ -344,11 +344,11 @@
       "description": "Genres: Slice of Life\nTags:Cute Girls Doing Cute Things/Female Protagonist/Food/Primarily Female Cast/Iyashikei\nAn original animation about the daily life of five girls who have just become university students.<br><br>\nThey love delicious food, want to have lots of fun with everyone, and try their best to study, so they're enjoying university life to the fullest!<br><br>\n(Source: Official Site, Translated)"
     },
     {
-      "id": "tt35331840",
+      "id": "tt34853325",
       "type": "series",
-      "name": "Uchuujin MuuMuu",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185070-yxFQy9DsTGVM.jpg",
-      "description": "Genres: Comedy, Mystery, Sci-Fi, Slice of Life\nTags:Seinen/Animals/Aliens\nA cat-like alien from a distant galaxy, MuMu, arrives on Earth. His goal is to learn about home appliance technology on Earth to recover the technology his species has lost. The protagonist, Sakurako, has a typical university life, but everything changes with MuMu's arrival! What begins as an unexpected cohabitation quickly turns into a whirlwind of chaotic events. The chemistry between Sakurako and MuMu leads to a super-spectacular, appliance-filled, and cat comedy adventure.\n<br><br>\n(Source: Pony Canyon)"
+      "name": "Princess-Session Orchestra",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178052-pzEAGk697GMM.png",
+      "description": "Genres: Mahou Shoujo, Music\nTags:Henshin/Magic/Female Protagonist\nThe anime takes place in Alicepia, which is a mysterious country that has existed since ancient times. The inhabitants of Alicepia, the Alicepians, are a fun-loving people, but one day mysterious monsters called Jamaock appeared to threaten the peace of Alicepia. The story follows a trio of \"princesses\" who never forget the song in their hearts, even when facing such danger and step up to save the day with the power of music. <br><br>\n\n(Source: Anime News Network, Crunchyroll News, edited)"
     }
   ]
 }
